<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/nurse2"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:background="@drawable/stylebutton1"
            android:layout_height="55dp"
            android:src="@drawable/ic_archive"/>

        <Button
            android:id="@+id/lihatbtn"
            android:layout_width="115dp"
            android:background="@drawable/stylebutton1"
            android:layout_height="55dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="right"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:background="@drawable/stylebutton2"
            android:layout_height="55dp"
            android:src="@drawable/ic_add_box"/>

        <Button
            android:id="@+id/inputbtn"
            android:layout_width="115dp"
            android:background="@drawable/stylebutton2"
            android:layout_height="55dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/input"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:background="@drawable/stylebutton3"
            android:src="@drawable/ic_info" />

        <Button
            android:id="@+id/infobtn"
            android:layout_width="115dp"
            android:background="@drawable/stylebutton3"
            android:layout_height="55dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/info"/>

    </LinearLayout>
</LinearLayout>